improve java options and work on external registration